@@ -1,3 +1,4 @@
+Water tab: Use an extended boundary to prevent flickering when a water molecule wraps from one side to the other
 Water tab: Wired up "show water charges" checkbox
 Water tab: Add clipping for particle window graphic for sucrose and salt ions
 Water tab: Added interactions with salt ions
